--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header {
 
 .title-input,
 .task-input,
-.search-input {
+.filter-input {
   padding-left: 5px;
   font-size: 20px;
 }
@@ -33,7 +33,7 @@ header {
 
 .title-input,
 .task-input,
-.search-input {
+.filter-input {
   display: block;
   width: 60%;
   margin: auto;
@@ -43,7 +43,7 @@ header {
   color: #939598;
 }
 
-.search-input {
+.filter-input {
   height: 50px;
 }
 
@@ -191,7 +191,7 @@ button {
   }
 
   .title-input,
-  .search-input {
+  .filter-input {
     width: 80%;
     height: 10%;
     margin-top: 10px;
@@ -210,7 +210,7 @@ button {
     margin-top: 10px;
   }
 
-  .search-input {
+  .filter-input {
     height: 10%;
   }
 
