--- a/styles.css
+++ b/styles.css
@@ -52,16 +52,8 @@ header {
   margin-top: 0;
 }
 
-.toggle-complete-btns {
-  width: 60%;
-  display: flex;
-  justify-content: space-between;
-  margin: auto;
-}
-
 .save-btn,
 .show-completed-btn,
-.clear-filter-btn,
 .show-more-btn {
   height: 40px;
   width: 60%;
@@ -78,10 +70,8 @@ header {
   margin: 20px auto;
 }
 
-.show-completed-btn,
-.clear-filter-btn {
-  margin: 10px 0 20px;
-  width: 45%;
+.show-completed-btn {
+  margin-bottom: 20px;
 }
 
 .save-btn:hover,
@@ -110,7 +100,7 @@ header {
 
 .importance-btn {
   height: 40px;
-  width: 100px;
+  width: 75px;
   border: none;
   background-color: #E5F3F2;
   color: #6D6E71;
@@ -127,6 +117,15 @@ header {
   color: #FFFFFF;
 }
 
+.clear-filter-btn {
+  height: 40px;
+  width: 80px;
+  border: none;
+  background-color: #00A79D;
+  color: #FFFFFF;
+  font-size: 16px;
+}
+
 .todo-container {
   width: 100%;
   display: flex;
@@ -138,7 +137,6 @@ header {
   padding-bottom: 20px;
   border-bottom: 2px solid #D1D3D4;
 }
-
 
 .completed {
   position: absolute;
@@ -241,12 +239,8 @@ button {
 }
 
 .down-vote-btn {
-  height: 25px;
-  width: 25px;
   background-image: url("assets/downvote.svg");
-  background-repeat: no-repeat;
   margin: 0px 15px;
-  border: none;
 }
 
 .down-vote-btn:hover{
@@ -269,37 +263,52 @@ button {
 /*media queries*/
 
 @media screen and (max-width: 850px) {
-  .importance-btn {
-    width: 75px;
+  .filter-btn-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;;
+  }
+  .importance-btn,
+  .clear-filter-btn {
+    width: 130px;
+    margin-bottom: 10px;
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
   .title-input,
   .task-input,
   .save-btn,
+  .show-completed-btn,
   .filter-input,
-  .toggle-complete-btns,
   .filter-btn-container,
   .todo-card,
   .show-more-btn {
     width: 80%;
   }
+  .importance-btn,
+  .clear-filter-btn {
+    width: 150px;
+  }
 }
 
-@media screen and (max-width: 500px) {
-  .toggle-complete-btns {
-    display: flex;
-    flex-direction: column;
-  }
-  .show-completed-btn,
+@media screen and (max-width: 580px) {
+  .importance-btn,
   .clear-filter-btn {
-    width: 100%;
+    width: 120px;
   }
-  .show-completed-btn {
-    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 470px) {
+  .importance-btn,
+  .clear-filter-btn {
+    width: 100px;
   }
-  .importance-btn {
-    width: 65px;
+}
+
+@media screen and (max-width: 400px) {
+  .importance-btn,
+  .clear-filter-btn {
+    width: 80px;
   }
 }
